CobolCompiler.java
/* CobolCompiler.java */
/* Generated By:JavaCC: Do not edit this line. CobolCompiler.java */
  import java.io.FileInputStream;
  import java.io.InputStream;

public class CobolCompiler implements CobolCompilerConstants {

                // Buffer para ir guardando el código de pila generado 
    StringBuilder outputBuffer = new StringBuilder();

                // Contador para etiquetas
                int labelCounter = 0;

                String newLabel() {
      return "LBL" + (labelCounter++);
    }

        int tempCounter = 1;
    java.util.Stack<String> pilaTemps = new java.util.Stack<String>();
        String newTemp() { return "t" + (tempCounter++); }

        void genera_linea(String linea, boolean conSangria) {
      if (conSangria) {
        outputBuffer.append("    " + linea + "\u005cn");
      } else {
        outputBuffer.append(linea + "\u005cn");
      }
    }

         public static void main(String args[]) throws ParseException {
        CobolCompiler parser;
        InputStream input;
        try {
          if (args.length == 0) {
              input = System.in;
          } else {
              input = new FileInputStream(args[0]);
          }
          parser = new CobolCompiler(input);
          parser.Axioma();

                  System.out.print(parser.outputBuffer.toString());

        } catch (java.io.FileNotFoundException e) {
          System.err.println("error: archivo no encontrado");
        } catch (ParseException e) {
          System.err.println("error de sintaxis: " + e.getMessage());
        } catch (TokenMgrError e) {
          System.err.println("error lexico: " + e.getMessage());
        }
    }

/* analizador sintactico */

// Primera regla
  final public void Axioma() throws ParseException {
    jj_consume_token(PROGRAMA);
    jj_consume_token(ID);
    jj_consume_token(PUNTO);
    jj_consume_token(INICIO);
    Sentencias();
    jj_consume_token(FIN);
    jj_consume_token(PUNTO);
    jj_consume_token(0);
  }

// Distribuidor de verbos
  final public void Sentencias() throws ParseException {
    label_1:
    while (true) {
      Sentencia();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUEVE:
      case SUMA:
      case RESTA:
      case MULTIPLICA:
      case DIVIDE:
      case LEE:
      case MUESTRA:
      case SI:
      case MIENTRAS:
      case VARYING:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
  }

// Distribuidor de verbos (singular) 
  final public void Sentencia() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LEE:
    case MUESTRA:{
      Io();
      break;
      }
    case MUEVE:
    case SUMA:
    case RESTA:
    case MULTIPLICA:
    case DIVIDE:{
      Asignar();
      break;
      }
    case MIENTRAS:
    case VARYING:{
      Bucle();
      break;
      }
    case SI:{
      Comparar();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(PUNTO);
  }

//  Reglas auxiliares 

// Entrada/Salida
  final public void Io() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LEE:{
      jj_consume_token(LEE);
      t = jj_consume_token(ID);
genera_linea("lee " + t.image, true);
      break;
      }
    case MUESTRA:{
      jj_consume_token(MUESTRA);
      ListaLiterales();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Un literal puede ser un identificador, un número o una cadena
  final public void Literal() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      t = jj_consume_token(ID);
genera_linea("print " + t.image, true);
      break;
      }
    case NUM:{
      t = jj_consume_token(NUM);
genera_linea("print " + t.image, true);
      break;
      }
    case CAD:{
      t = jj_consume_token(CAD);
genera_linea("print " + t.image, true);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//  cuántos literales hay en la lista
  final public int ListaLiterales() throws ParseException {int n = 1;
    Literal();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMA:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMA);
      Literal();
n++;
    }
{if ("" != null) return n;}
    throw new Error("Missing return statement in function");
  }

  final public void Asignar() throws ParseException {Token t_destino; String op1, op2, res, tempAsig;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MUEVE:{
      jj_consume_token(MUEVE);
      Expr();
      jj_consume_token(A);
      t_destino = jj_consume_token(ID);
res = pilaTemps.pop();
        /* [cite: 41]
        genera_linea("valori " + t_destino.image, true); 
        genera_linea("swap", true); 
        genera_linea("asigna", true); 
        */
        genera_linea(t_destino.image + " := " + res, true);
      break;
      }
    case SUMA:{
      jj_consume_token(SUMA);
      Expr();
      jj_consume_token(A);
      t_destino = jj_consume_token(ID);
op2 = pilaTemps.pop(); // Valor a sumar
        tempAsig = newTemp();
        genera_linea(tempAsig + " := " + t_destino.image + " + " + op2, true);
        genera_linea(t_destino.image + " := " + tempAsig, true);
      break;
      }
    case RESTA:{
      jj_consume_token(RESTA);
      Expr();
      jj_consume_token(DE);
      t_destino = jj_consume_token(ID);
op2 = pilaTemps.pop(); // Valor a restar
        tempAsig = newTemp();
        genera_linea(tempAsig + " := " + t_destino.image + " - " + op2, true);
        genera_linea(t_destino.image + " := " + tempAsig, true);
      break;
      }
    case MULTIPLICA:{
      jj_consume_token(MULTIPLICA);
      Expr();
      jj_consume_token(POR);
      Expr();
      jj_consume_token(DANDO);
      t_destino = jj_consume_token(ID);
op2 = pilaTemps.pop();
        op1 = pilaTemps.pop();
        tempAsig = newTemp();
        genera_linea(tempAsig + " := " + op1 + " * " + op2, true);
        genera_linea(t_destino.image + " := " + tempAsig, true);
      break;
      }
    case DIVIDE:{
      jj_consume_token(DIVIDE);
      Expr();
      jj_consume_token(ENTRE);
      Expr();
      jj_consume_token(DANDO);
      t_destino = jj_consume_token(ID);
op2 = pilaTemps.pop();
        op1 = pilaTemps.pop();
        tempAsig = newTemp();
        genera_linea(tempAsig + " := " + op1 + " / " + op2, true);
        genera_linea(t_destino.image + " := " + tempAsig, true);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// jerarquia matematica
  final public 
void Expr() throws ParseException {String op1, op2, res;
    Mult();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAS:
      case MENOS:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAS:{
        jj_consume_token(MAS);
        Mult();
op2 = pilaTemps.pop(); op1 = pilaTemps.pop();
          res = newTemp();
          // genera_linea("add", true); <- comento la parte para para pila abstracta
          genera_linea(res + " := " + op1 + " + " + op2, true);
          pilaTemps.push(res);
        break;
        }
      case MENOS:{
        jj_consume_token(MENOS);
        Mult();
op2 = pilaTemps.pop(); op1 = pilaTemps.pop();
          res = newTemp();
          genera_linea(res + " := " + op1 + " - " + op2, true);
          pilaTemps.push(res);
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Mult() throws ParseException {String op1, op2, res;
    Val();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULT:
      case DIV:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULT:{
        jj_consume_token(MULT);
        Val();
op2 = pilaTemps.pop(); // Segundo operando
          op1 = pilaTemps.pop(); // Primer operando
          res = newTemp();
          // genera_linea("mul", true); // <-- comento la parte para para pila abstracta
          genera_linea(res + " := " + op1 + " * " + op2, true);
          pilaTemps.push(res); // Guardamos el temporal para la siguiente operación 

        break;
        }
      case DIV:{
        jj_consume_token(DIV);
        Val();
op2 = pilaTemps.pop(); op1 = pilaTemps.pop();
          res = newTemp();
          // genera_linea("div", true); // <-- COMENTADO (Modelo Pila)
          genera_linea(res + " := " + op1 + " / " + op2, true);
          pilaTemps.push(res);
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Val() throws ParseException {Token t; String res;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUM:{
      t = jj_consume_token(NUM);
res = newTemp();
      // genera_linea("mete " + t.image, true); <- comento la parte para para pila abstracta
      genera_linea(res + " := " + t.image, true);
      pilaTemps.push(res);
      break;
      }
    case ID:{
      t = jj_consume_token(ID);
pilaTemps.push(t.image);
      break;
      }
    case PA:{
      jj_consume_token(PA);
      Expr();
      jj_consume_token(PC);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// estructuras de control

// Estructura condicional IF-THEN-ELSE-END
  final public 
void Comparar() throws ParseException {String cond, lbl_else, lbl_fin = null;
    jj_consume_token(SI);
    cond = BooleanExpr();
lbl_else = newLabel();
        // Invertimos la lógica para el salto al ELSE
        // Nota: Una forma simple es usar 'if not(cond) goto lbl_else'
        genera_linea("if " + cond + " goto " + newLabel() + " (falso) -> " + lbl_else, true);
        // Pero para seguir exacto al prof:
        genera_linea("if_falso " + cond + " goto " + lbl_else, true);
    jj_consume_token(ENTONCES);
    Sentencias();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SINO:{
      jj_consume_token(SINO);
lbl_fin = newLabel();
            genera_linea("goto " + lbl_fin, true);
            genera_linea(lbl_else + ":", false);
      Sentencias();
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(FIN);
if (lbl_fin != null) genera_linea(lbl_fin + ":", false);
        else genera_linea(lbl_else + ":", false);
  }

// Bucle WHILE
  final public void Bucle() throws ParseException {String lbl_inicio, lbl_fin, cond; Token t_var;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MIENTRAS:{
      jj_consume_token(MIENTRAS);
lbl_inicio = newLabel();
        lbl_fin = newLabel();
        genera_linea(lbl_inicio + ":", false);
      cond = BooleanExpr();
genera_linea("if_falso " + cond + " goto " + lbl_fin, true);
      jj_consume_token(HACER);
      Sentencias();
      jj_consume_token(FIN);
genera_linea("goto " + lbl_inicio, true);
        genera_linea(lbl_fin + ":", false);
      break;
      }
    case VARYING:{
      jj_consume_token(VARYING);
      t_var = jj_consume_token(ID);
      jj_consume_token(DE);
      Expr();
String valIni = pilaTemps.pop();
        genera_linea(t_var.image + " := " + valIni, true);
        lbl_inicio = newLabel();
        genera_linea(lbl_inicio + ":", false);
      jj_consume_token(A);
      Expr();
String valLimit = pilaTemps.pop();
        lbl_fin = newLabel();
        // Comprobación de salida del bucle
        genera_linea("if " + t_var.image + " >= " + valLimit + " goto " + lbl_fin, true);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case POR:{
        jj_consume_token(POR);
        Expr();
        break;
        }
      default:
        jj_la1[12] = jj_gen;

      }
      jj_consume_token(HACER);
      Sentencias();
      jj_consume_token(FIN);
String incremento = "1";
        if (!pilaTemps.isEmpty()) incremento = pilaTemps.pop();

        String tNext = newTemp();
        genera_linea(tNext + " := " + t_var.image + " + " + incremento, true);
        genera_linea(t_var.image + " := " + tNext, true);
        genera_linea("goto " + lbl_inicio, true);
        genera_linea(lbl_fin + ":", false);
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Regla diagrama booleanExpr
  final public String BooleanExpr() throws ParseException {String op1, op2, condicion = ""; Token t_no = null; Token t_op;
    Expr();
op1 = pilaTemps.pop();
    jj_consume_token(ES);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NO:{
      t_no = jj_consume_token(NO);
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MAYOR:
    case MENOR:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAYOR:{
        t_op = jj_consume_token(MAYOR);
        break;
        }
      case MENOR:{
        t_op = jj_consume_token(MENOR);
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(QUE);
      Expr();
op2 = pilaTemps.pop();
        String rel = (t_op.kind == MAYOR) ? ">" : "<";
        if (t_no != null) rel = (t_op.kind == MAYOR) ? "<=" : ">=";
        condicion = op1 + rel + op2;
      break;
      }
    case IGUAL:{
      jj_consume_token(IGUAL);
      jj_consume_token(A);
      Expr();
op2 = pilaTemps.pop();
        String rel = (t_no != null) ? "!=" : "==";
        condicion = op1 + rel + op2;
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return condicion;}
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public CobolCompilerTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[17];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x807ad000,0x807ad000,0x300000,0x0,0x800,0xad000,0x0,0x0,0x0,0x0,0x0,0x1000000,0x40000,0x80000000,0x4000000,0x18000000,0x58000000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x2,0x2,0x0,0x1c00,0x0,0x0,0x30,0x30,0xc0,0xc0,0xd00,0x0,0x0,0x2,0x0,0x0,0x0,};
   }

  /** Constructor with InputStream. */
  public CobolCompiler(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public CobolCompiler(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new CobolCompilerTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public CobolCompiler(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new CobolCompilerTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public CobolCompiler(CobolCompilerTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(CobolCompilerTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk_f() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[45];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 17; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 45; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

  }
